Started putting up information

--- a/Project/NECIS,ISST and Sportverein Info.html
+++ b/Project/NECIS,ISST and Sportverein Info.html
@@ -3,7 +3,22 @@
     <title>NECIS/ISST and Sportverein Info</title>
   </head>
   <body>
+    <h3><a href="index.html"> Home</a>
     <h1 style="background-color: red;"> NECIS/ISST and Sportverein Info </h1>
-    <h2 style="background-color: blue;"> NECIS </h2>
+<h2 style="background-color: blue;"> NECIS: </h2>
+    <p> <b>NECIS</b> stands for <b>N</b>orthwest <b>E</b>uropean <b>C</b>ouncil of <b>I</b>nternational <b>S</b>chools. It began as a small thing across three schools for just basketball, volleyball, and football. It has grown into a system with 11 schools, 4 age groups and 9 sports including:</p>
+<ul style="list-style-type:circle">
+  <li>Basketball</li>
+  <li>Football</li>
+  <li>Volleyball</li>
+  <li>Swimming</li>
+  <li>Tennis</li>
+  <li>Golf</li>
+  <li>Softball</li>
+  <li>Track and Field</li>
+  <li>Touch Rugby</li>
+</ul>
+    <h2 style="background-color: blue;"> ISST: </h2>
+    <h2 style="background-color: blue;"> Sportverein: </h2>
   </body>
 </html>
