--- a/Project/index.html
+++ b/Project/index.html
@@ -1,11 +1,32 @@
 <html>
    <head>
-      <title>Jack's excellent website</title>
+      <title>ISD Sports</title>
+      <style>
+      table, th, tr {Border: 5px solid black;}
+      </style>
    </head>
-   <div id="header"></div>
+   <div id="header">
+   </div>
    <body>
       <H1 style="background-color: red;">Sports Program at ISD <img src="http://www.isdlions.de/SharedSites/7/templates/images/ISD/logo.png"> </img></H1>
-      <h2><a href="http://www.isdlions.de/Home_Page.htm"> Sign Up</a>
-      <h2><a href="NECIS,ISST and Sportverein Info.html"> NECIS/ISST and Sportverein Info</a>
+      <div id="left_block">
+      <table>
+        <tr>
+          <th style="background-color: red;"> <h2><a href="http://www.isdlions.de/Home_Page.htm"> Sign Up</a> </th>
+        </tr>
+        <tr>
+          <th style="background-color: red;"> <h2><a href="NECIS,ISST and Sportverein Info.html"> NECIS/ISST and Sportverein Info</a> </th>
+        </tr>
+      </table>
+    </div>
+    <div id="middle_block">
+      <table>
+        <tr>
+          <th> Basketball </th>
+          <th> Volleyball </th>
+          <th> Football </th>
+        </tr>
+      </table>
+    </div>
    </body>
 </html>
