Made other pages and tried to divide my areas and move them

--- a/Project/index.html
+++ b/Project/index.html
@@ -1,32 +1,30 @@
 <html>
    <head>
       <title>ISD Sports</title>
+      <link rel="stylesheet" type="text/css" href= "stylesheet.css"></link>
       <style>
       table, th, tr {Border: 5px solid black;}
       </style>
    </head>
-   <div id="header">
-   </div>
    <body>
-      <H1 style="background-color: red;">Sports Program at ISD <img src="http://www.isdlions.de/SharedSites/7/templates/images/ISD/logo.png"> </img></H1>
-      <div id="left_block">
-      <table>
+     <H1 style="background-color: red;">Sports Program at ISD <img src="http://www.isdlions.de/SharedSites/7/templates/images/ISD/logo.png"> </img></H1>
+       <div id="title"><table>
+       <tr>
+         <th><a href="basketball.html"><div id="title"><h3><big> Basketball</big></h3></div></a></th>
+         <th><a href="volleyball.html"><div id="title"><h3><big> Volleyball</big></h3></div></a></th>
+         <th><a href="football.html"><div id="title"><h3><big> Football</big></h3></div></a></th>
+       </tr>
+     </table>
+      <div id="second"><table>
         <tr>
-          <th style="background-color: red;"> <h2><a href="http://www.isdlions.de/Home_Page.htm"> Sign Up</a> </th>
+          <div id="second"><th style="background-color: red;"> <h2><a href="http://www.isdlions.de/Home_Page.htm"> Sign Up</a> </th>
         </tr>
         <tr>
-          <th style="background-color: red;"> <h2><a href="NECIS,ISST and Sportverein Info.html"> NECIS/ISST and Sportverein Info</a> </th>
-        </tr>
-      </table>
-    </div>
-    <div id="middle_block">
-      <table>
-        <tr>
-          <th> Basketball </th>
-          <th> Volleyball </th>
-          <th> Football </th>
+          <div id="second"><th style="background-color: red;"> <h2><a href="NECIS,ISST and Sportverein Info.html"> NECIS/ISST and Sportverein Info</a> </th>
         </tr>
       </table>
     </div>
    </body>
 </html>
+
+ 
